<resources>
    <string name="app_name">Moments</string>
    <string name="app_slogan">Insert Long Long Slogan here</string>
    <string name="hello_world">Welcome to Moments!</string>
    <string name="hello_invite">Now, invite your partner to use Moments!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="drawer_item_homeprimary">Home</string>
    <string name="drawer_item_timeline">Timeline</string>
    <string name="drawer_item_expenses">Expenses</string>
    <string name="drawer_item_statistics">Statistics</string>
    <string name="drawer_item_map">Map</string>
    <string name="drawer_item_gallery">Gallery</string>
    <string name="drawer_item_profile">Profile</string>
    <string name="drawer_item_settingsprimary">Settings</string>
    <string name="drawer_item_signout">Sign Out</string>
    <string name="emailHint">E-mail</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="createAccount">Sign Up</string>
    <string name="drawer_item_home">Hello</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="lognBackDesc">Wallpaper</string>
    <string name="showPass">Show Password</string>
    <string name="invite_greeting">Hello there!</string>
    <string name="tell_your_name">Please tell us your name</string>
    <string name="emailPartner">Email</string>
    <string name="secretCode">Secret Code</string>
    <string name="partnerSecret">Set a secret code exclusive to you two</string>
    <string name="inviteButton">INVITE</string>
    <string name="invited_greeting">Hello, your partner is waiting for you to accept the invitation!</string>
    <string name="startUsingAppButton">START USING MOMENTS</string>
    <string name="enterSecretCode">Enter the secret code</string>
    <string name="waitingToAccept"> Please wait for your partner to accept the invitation.</string>
    <string name="waitingImage">Waiting Image Placeholder</string>
    <string name="partnerName">Enter your name</string>
    <string name="title_activity_add_new_place">Add New Place</string>
    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>

    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
    Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="dateImage">Date image</string>
    <string name="whoPaid">Amount paid</string>
    <string name="pickDate">Pick a date</string>
    <string name="noteOrMemory">Add a note or memory</string>
    <string name="submit">DONE</string>
    <string name="input">Write a few words</string>
    <string name="cancel">CANCEL</string>
    <string name="pickPlace">Pick a place</string>
    <string name="addPicture">Select up to 3 photos</string>
</resources>
