<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:material="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/FrameLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/wall2"
        android:scaleType="centerCrop"
        android:contentDescription="@string/lognBackDesc"
        />

    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="32dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="moments.app.com.LoginActivity">

    <android.support.v7.widget.AppCompatTextView
        fontPath="fonts/Pacifico-Regular.ttf"
        android:id="@+id/app_name"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:textSize="48sp"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/app_slogan"
        android:text="@string/app_slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:layout_marginTop="28dp"
        />
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        />

        </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:id="@+id/twoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:layout_weight="1"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createAccount"
        android:layout_weight="1"/>

    </LinearLayout>


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/forgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgotPassword"
        android:gravity="center_horizontal" />

        <ProgressBar
            android:id="@+id/signUpProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:indeterminate="true"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            android:indeterminateTint="@color/myAccentColor"
            android:indeterminateTintMode="src_in" />

    </LinearLayout>


</FrameLayout>
