<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/invitedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invited_greeting"
        android:textSize="16sp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/partnerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/partnerName"
        android:maxLines="1"
        android:textSize="16sp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/secretCodeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/enterSecretCode"
        android:maxLines="1"
        android:textSize="16sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/startUsingAppButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/startUsingAppButton"
        android:textColor="@color/myAccentColor" />

    <ProgressBar
        android:id="@+id/inviteProgress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/myAccentColor"
        android:indeterminateTintMode="src_in"
        android:visibility="invisible" />

</LinearLayout>