<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="moments.app.com.AddNewPlaceActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar_actionbarAdd"
        style="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="@dimen/abc_action_bar_default_height_material" />

    <AutoCompleteTextView
        android:id="@+id/autocomplete_places"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:hint="@string/autocomplete_hint"
        android:textColor="@android:color/primary_text_light" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/powered_by_google_light" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
    <!--
    <TextView
        android:id="@+id/place_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:text=""
        android:layout_margin="16dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/place_latLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:text=""
        android:layout_margin="16dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/dateImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dateImage"
            android:src="@drawable/ic_calendar_grey600_36dp" />

        <TextView
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/pickDate"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <CheckBox
            android:id="@+id/name1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editNameText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_currency_inr_grey600_18dp"
            android:drawableStart="@drawable/ic_currency_inr_grey600_18dp"
            android:enabled="false"
            android:gravity="center_vertical"
            android:hint="@string/whoPaid"
            android:background="@null"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">

        <CheckBox
            android:id="@+id/name2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editNameText2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_currency_inr_grey600_18dp"
            android:drawableStart="@drawable/ic_currency_inr_grey600_18dp"
            android:enabled="false"
            android:gravity="center_vertical"
            android:hint="@string/whoPaid"
            android:background="@null"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/noteImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dateImage"
            android:src="@drawable/ic_pencil_grey600_36dp" />

        <TextView
            android:id="@+id/makeANote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/noteOrMemory"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    <!--
        <TextView
            android:id="@+id/noteAttached"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:text="@string/noteOrMemory"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
    -->
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>
